# webarea

./: .gitignore  Cargo.toml  README.md  build.js  package.json  rollup.config.js  test.js  tsconfig.json
lib/: app.ts  core.js  core.ts  index.ts  preload.js  preload.ts  types.ts  webview.ts
scripts/: build-binaries.js  build-dev.js  build-npm.js  downloader.js
src/: lib.rs
