[package]
name = "webarea"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.wry]
version = "0.18.3"
features = ["devtools"]

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6", 'channel-api', 'promise-api', 'task-api']
